--- a/src/Resources/views/mollie/component/credit-card-mandate-remove-modal.html.twig
+++ b/src/Resources/views/mollie/component/credit-card-mandate-remove-modal.html.twig
@@ -18,12 +18,8 @@
                                 {% endblock %}
 
                                 {% block mollie_credit_card_mandate_remove_modal_header_close_button %}
-                                    <button class="close"
-                                            type="button"
-                                            {{ dataBsDismissAttr }}="modal"
-                                            aria-label="Close"
-                                        >
-                                        {% sw_icon 'x' %}
+                                    <button class="close" type="button"{{ dataBsDismissAttr }}="modal"aria-label="Close">
+                                    {% sw_icon 'x' %}
                                     </button>
                                 {% endblock %}
                             </div>
@@ -31,37 +27,35 @@
 
                         {% block mollie_credit_card_mandate_remove_modal_body %}
                             <div class="modal-body">
-                                {% block mollie_credit_card_mandate_remove_modal_body_card_subscription %}
-                                    {% if subscription %}
+                                {% if subscription %}
+                                    {% block mollie_credit_card_mandate_remove_modal_body_card_subscription %}
                                         <p>{{ "molliePayments.components.mandateRemoveModal.cardSubscription"|trans|striptags }}</p>
-                                    {% endif %}
-                                {% endblock %}
+                                    {% endblock %}
+                                {% endif %}
 
-                                {% block mollie_credit_card_mandate_remove_modal_body_confirmation %}
-                                    <p>{{ "molliePayments.components.mandateRemoveModal.deleteConfirmation"|trans|striptags }}</p>
-                                {% endblock %}
+                                {% if not subscription %}
+                                    {% block mollie_credit_card_mandate_remove_modal_body_confirmation %}
+                                        <p>{{ "molliePayments.components.mandateRemoveModal.deleteConfirmation"|trans|striptags }}</p>
+                                    {% endblock %}
+                                {% endif %}
                             </div>
                         {% endblock %}
 
                         {% block mollie_credit_card_mandate_remove_modal_footer %}
                             <div class="modal-footer">
                                 {% block mollie_credit_card_mandate_remove_modal_header_back_button %}
-                                    <button class="btn"
-                                            type="button"
-                                        {{ dataBsDismissAttr }}="modal"
-                                        >
-                                        {{ "molliePayments.components.mandateRemoveModal.cancelButton"|trans|striptags }}
+                                    <button class="btn" type="button"{{ dataBsDismissAttr }}="modal">
+                                    {{ "molliePayments.components.mandateRemoveModal.cancelButton"|trans|striptags }}
                                     </button>
                                 {% endblock %}
 
-                                {% block mollie_credit_card_mandate_remove_modal_footer_form_button %}
-                                    <button type="button"
-                                            class="btn btn-primary mollie-credit-card-mandate-remove-modal-button"
-                                            {{ dataBsDismissAttr }}="modal"
-                                    >
+                                {% if not subscription %}
+                                    {% block mollie_credit_card_mandate_remove_modal_footer_form_button %}
+                                        <button type="button" class="btn btn-primary mollie-credit-card-mandate-remove-modal-button"{{ dataBsDismissAttr }}="modal">
                                         {{ "molliePayments.components.mandateRemoveModal.deleteButton"|trans|striptags }}
-                                    </button>
-                                {% endblock %}
+                                        </button>
+                                    {% endblock %}
+                                {% endif %}
                             </div>
                         {% endblock %}
                     </div>
