MOL-877: Add more Shopware 6.5 support

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-external-link/mollie-external-link.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-external-link/mollie-external-link.scss
@@ -2,7 +2,7 @@
 
 .mollie-external-link {
     color: $color-shopware-brand-500;
-    font-size: $font-size-small;
+    font-size: 12px;
     text-decoration: underline;
     cursor: pointer;
 
@@ -16,7 +16,7 @@
     }
 
     &--small {
-        font-size: $font-size-extra-small;
+        font-size: 11px;
 
         .mollie-external-link__icon {
             margin-left: 2px;
