--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.scss
@@ -2,7 +2,7 @@
 
 .mollie-pluginconfig-info {
     .title {
-        font-size: $font-size-large;
+        font-size: 16px;
         font-weight: $font-weight-bold;
     }
 
@@ -12,7 +12,7 @@
 
     .description-footer {
         margin-top: 10px;
-        font-size: $font-size-small;
+        font-size: 12px;
     }
 
     .list {
