--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-internal-link/mollie-internal-link.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-internal-link/mollie-internal-link.scss
@@ -7,7 +7,7 @@
     align-items: center;
     text-decoration: none;
     color: $color-shopware-brand-500;
-    font-size: $font-size-small;
+    font-size: 12px;
 
     &:hover,
     &:focus {
