--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -4,7 +4,9 @@
     <sw-container class="sw-order-line-items-grid__actions-container"
                   columns="1fr auto"
                   gap="16px"
-                  v-show="!editable">
+                  v-show="!editable"
+                v-if="shopwareVersion < 6.5"
+    >
 
         {% block sw_order_line_items_grid_line_item_filter %}
             {% parent %}
@@ -88,31 +90,13 @@
               @modal-close="onCloseShipOrderModal"
               :title="$tc('mollie-payments.modals.shipping.title')"
               variant="small">
-        <sw-container columns="1fr" gap="16px">
-            <p>{{ $tc('mollie-payments.modals.shipping.order.description') }}</p>
-
-            <sw-data-grid class="mollie-ship-order-grid"
-                          :dataSource="shippableLineItems"
-                          :columns="getShipOrderColumns"
-                          :plainAppearance="true"
-                          :showSelection="false"
-                          :showPreviews="false"
-                          :showActions="false">
-            </sw-data-grid>
-
-            {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
-                <sw-switch-field v-model="showTrackingInfo"
-                                 :label="$tc('mollie-payments.modals.shipping.showTracking')"
-                                 :noMarginTop="true"
-                                 size="small">
-                </sw-switch-field>
-                <mollie-tracking-info v-if="showTrackingInfo"
-                                      :delivery="order.deliveries.first()"
-                                      :tracking="tracking">
-                </mollie-tracking-info>
-            {% endblock %}
-        </sw-container>
-
+        <mollie-ship-order
+        :tracking="tracking"
+        :shippableLineItems="shippableLineItems"
+        :showTrackingInfo="showTrackingInfo"
+        :order="order"
+        >
+        </mollie-ship-order>
         <template #modal-footer>
             <sw-button @click="onCloseShipOrderModal" size="small">
                 {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
