--- a/src/Resources/views/storefront/base.html.twig
+++ b/src/Resources/views/storefront/base.html.twig
@@ -1,6 +1,6 @@
 {% sw_extends '@Storefront/storefront/base.html.twig' %}
 
 {% block base_main %}
-    {# <script src="{{ asset('bundles/molliepayments/js/mollie.js', 'asset') }}"></script> #}
+    <script src="{{ asset('bundles/molliepayments/js/mollie-payments.js', 'asset') }}"></script>
     {{ parent() }}
 {% endblock %}
