--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -33,6 +33,7 @@
                                         type="button"
                                         id="accountOrderDropdown"
                                         data-toggle="dropdown"
+                                        data-bs-toggle="dropdown"
                                         aria-haspopup="true"
                                         aria-expanded="false">
                                     {% sw_icon 'more-horizontal' %}
@@ -270,6 +271,8 @@
                                     type="submit"
                                     data-toggle="collapse"
                                     data-target="#subscription{{ subscription.id }}"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#subscription{{ subscription.id }}"
                                     aria-expanded="false"
                                     aria-controls="collapseExample">
                                 {% block page_account_subscription_item_subscription_table_body_cell_toggle_subscription_details_button_text %}
@@ -322,7 +325,9 @@
                                                                                         <button type="button"
                                                                                                 class="btn btn-primary"
                                                                                                 data-toggle="modal"
-                                                                                                data-target="#editBillingAddress{{ subscription.id }}">
+                                                                                                data-target="#editBillingAddress{{ subscription.id }}"
+                                                                                                data-bs-toggle="modal"
+                                                                                                data-bs-target="#editBillingAddress{{ subscription.id }}">
                                                                                             {{ "molliePayments.subscriptions.account.btnEditBillingAddress" | trans | sw_sanitize }}
                                                                                         </button>
                                                                                     {% endif %}
@@ -359,6 +364,7 @@
                                                                                         <button type="button"
                                                                                                 class="close"
                                                                                                 data-dismiss="modal"
+                                                                                                data-bs-dismiss="modal"
                                                                                                 aria-label="Close">
                                                                                             <span aria-hidden="true">&times;</span>
                                                                                         </button>
@@ -475,7 +481,9 @@
                                                                                     <button type="button"
                                                                                             class="btn btn-primary"
                                                                                             data-toggle="modal"
-                                                                                            data-target="#editShippingAddress{{ subscription.id }}">
+                                                                                            data-target="#editShippingAddress{{ subscription.id }}"
+                                                                                            data-bs-toggle="modal"
+                                                                                            data-bs-target="#editShippingAddress{{ subscription.id }}">
                                                                                         {{ "molliePayments.subscriptions.account.btnEditShippingAddress" | trans | sw_sanitize }}
                                                                                     </button>
                                                                                 {% endif %}
@@ -510,6 +518,7 @@
                                                                                             <button type="button"
                                                                                                     class="close"
                                                                                                     data-dismiss="modal"
+                                                                                                    data-bs-dismiss="modal"
                                                                                                     aria-label="Close">
                                                                                                 <span aria-hidden="true">&times;</span>
                                                                                             </button>
