--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.html.twig
@@ -3,7 +3,7 @@
         {# --------------------------------------------------------------------------------------------- #}
         {# --------------------------------------------------------------------------------------------- #}
         {# --------------------------------------------------------------------------------------------- #}
-        <sw-card :title="titleCardOrder"  position-identifier="mollie-refund-manager-order-container"  class="mollie-refund-manager-order-container" :hero="false" :large="true">
+        <sw-card :title="titleCardOrder" position-identifier="mollie-refund-manager-order-container" class="mollie-refund-manager-order-container" :hero="false" :large="true">
             <sw-container columns="5fr 1fr" class="order-container-top">
                 <div class="order-container-top-left">
                     <sw-button-group>
@@ -39,18 +39,6 @@
                 </template>
 
                 <template #column-shopware.label="{ item }">
-                    <sw-icon v-if="item.shopware.promotion.discount > 0"
-                             name="default-package-gift" :small="true"
-                             class="order-item-icon color-product-discounted">
-                    </sw-icon>
-                    <sw-icon v-if="isItemPromotion(item)"
-                             name="default-package-gift" :small="true"
-                             class="order-item-icon color-promotion">
-                    </sw-icon>
-                    <sw-icon v-if="isItemDelivery(item)"
-                             name="default-package-open" :small="true"
-                             class="order-item-icon color-delivery">
-                    </sw-icon>
                     {{ item.shopware.label }}
                 </template>
                 <template #column-shopware.unitPrice="{ item }">
@@ -71,8 +59,6 @@
                     {{ item.refunded }} {{ $tc('mollie-payments.refund-manager.general.unitQuantity') }}
                 </template>
                 <template #column-inputQuantity="{ item }">
-                    <sw-icon v-if="!isItemRefundable(item)" name="default-basic-checkmark-circle"
-                             class="color-refunded"></sw-icon>
                     <sw-number-field numberType="float"
                                      v-model="item.refundQuantity"
                                      v-if="isItemRefundable(item)"
@@ -122,14 +108,13 @@
                 </template>
             </sw-data-grid>
             <div v-if="roundingDiff > 0" class="rounding-item-info-container color-rounding-item">
-                <sw-icon name="regular-exclamation-circle" :small="true" style="margin-right: 10px"></sw-icon>
                 {{ $tc('mollie-payments.refund-manager.cart.roundDiffItemAdded') }} ({{ roundingDiff | currency(order.currency.shortName) }})
             </div>
         </sw-card>
         {# --------------------------------------------------------------------------------------------- #}
         {# --------------------------------------------------------------------------------------------- #}
         {# --------------------------------------------------------------------------------------------- #}
-        <sw-card :hero="false" class="mollie-refund-manager-instructions-container" position-identifier="mollie-refund-manager-instructions-container"  :large="true">
+        <sw-card :hero="false" class="mollie-refund-manager-instructions-container" position-identifier="mollie-refund-manager-instructions-container" :large="true">
             <sw-container v-if="configShowInstructions" columns="1fr" gap="0px">
                 <div class="instructions-container-top">
                     <sw-button variant="context" size="small" icon="default-basic-x-block"
@@ -141,8 +126,7 @@
             <sw-container columns="4fr 4fr 3fr" gap="0px">
                 <sw-card-section v-if="configShowInstructions" position-identfier="instructions-container-content" class="instructions-container-content" divider="right">
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-money-cash" :small="false"
-                                 class="instructions-block-icon color-refund"></sw-icon>
+                        <div></div>
                         <div>
                             <strong> {{ $tc('mollie-payments.refund-manager.instructions.titleFullRefund') }}</strong>
                             <br/>
@@ -155,8 +139,7 @@
                         </div>
                     </sw-container>
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-money-cash" :small="false"
-                                 class="instructions-block-icon color-refund"></sw-icon>
+                        <div></div>
                         <div>
                             <strong> {{ $tc('mollie-payments.refund-manager.instructions.titleRoundingDiff') }}</strong>
                             <br/>
@@ -170,8 +153,7 @@
                     </sw-container>
 
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-building-shop" :small="false"
-                                 class="instructions-block-icon color-stock"></sw-icon>
+                        <div></div>
                         <div>
                             <strong>{{ $tc('mollie-payments.refund-manager.instructions.titleStockReset') }}</strong><br/>
                             {{ $tc('mollie-payments.refund-manager.instructions.textStockReset') }}
@@ -183,8 +165,7 @@
                         </div>
                     </sw-container>
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-package-open" :small="false"
-                                 class="instructions-block-icon color-delivery"></sw-icon>
+                        <div></div>
                         <div>
                             <strong>{{ $tc('mollie-payments.refund-manager.instructions.titleShipping') }}</strong><br/>
                             {{ $tc('mollie-payments.refund-manager.instructions.textShipping') }}
@@ -200,8 +181,7 @@
                 {# --------------------------------------------------------------------------------------------- #}
                 <sw-card-section v-if="configShowInstructions" class="instructions-container-content" divider="right">
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-money-cash" :small="false"
-                                 class="instructions-block-icon color-refund"></sw-icon>
+                        <div></div>
                         <div>
                             <strong>{{ $tc('mollie-payments.refund-manager.instructions.titlePartialAmount') }}</strong><br/>
                             {{ $tc('mollie-payments.refund-manager.instructions.textPartialAmount') }}
@@ -213,8 +193,7 @@
                         </div>
                     </sw-container>
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-money-cash" :small="false"
-                                 class="instructions-block-icon color-refund"></sw-icon>
+                        <div></div>
                         <div>
                             <strong>{{ $tc('mollie-payments.refund-manager.instructions.titlePartialItems') }}</strong>
                             <br/>
@@ -227,8 +206,7 @@
                         </div>
                     </sw-container>
                     <sw-container columns="1fr 20fr" class="instructions-block">
-                        <sw-icon name="default-package-gift" :small="false"
-                                 class="instructions-block-icon color-promotion"></sw-icon>
+                        <div></div>
                         <div>
                             <strong>{{ $tc('mollie-payments.refund-manager.instructions.titlePartialPromotions') }}</strong><br/>
                             {{ $tc('mollie-payments.refund-manager.instructions.textPartialPromotions') }}
@@ -282,7 +260,6 @@
                             {% block sw_order_line_items_grid_refund_summary_rounding_diff %}
                                 <template v-if="roundingDiff > 0">
                                     <dt class="color-rounding-item">
-                                        <sw-icon name="regular-exclamation-circle" :small="true"></sw-icon>
                                         &nbsp;&nbsp;
                                         {{ $tc('mollie-payments.refund-manager.summary.roundDiffItemAdded') }}
                                     </dt>
