--- a/src/Resources/views/mollie/component/credit-card-mandate-remove-modal.html.twig
+++ b/src/Resources/views/mollie/component/credit-card-mandate-remove-modal.html.twig
@@ -2,6 +2,7 @@
     <div class="modal fade mollie-credit-card-mandate-remove-modal"
          id="{{ modalId }}"
          data-backdrop="static"
+         data-bs-backdrop="static"
          tabindex="-1"
          role="dialog"
          aria-hidden="true">
@@ -18,7 +19,7 @@
                                 {% endblock %}
 
                                 {% block mollie_credit_card_mandate_remove_modal_header_close_button %}
-                                    <button class="close" type="button"{{ dataBsDismissAttr }}="modal"aria-label="Close">
+                                    <button class="close" type="button" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                                     {% sw_icon 'x' %}
                                     </button>
                                 {% endblock %}
@@ -44,14 +45,14 @@
                         {% block mollie_credit_card_mandate_remove_modal_footer %}
                             <div class="modal-footer">
                                 {% block mollie_credit_card_mandate_remove_modal_header_back_button %}
-                                    <button class="btn" type="button"{{ dataBsDismissAttr }}="modal">
+                                    <button class="btn" type="button" data-dismiss="modal" data-bs-dismiss="modal">
                                     {{ "molliePayments.components.mandateRemoveModal.cancelButton"|trans|striptags }}
                                     </button>
                                 {% endblock %}
 
                                 {% if not subscription %}
                                     {% block mollie_credit_card_mandate_remove_modal_footer_form_button %}
-                                        <button type="button" class="btn btn-primary mollie-credit-card-mandate-remove-modal-button"{{ dataBsDismissAttr }}="modal">
+                                        <button type="button" class="btn btn-primary mollie-credit-card-mandate-remove-modal-button" data-dismiss="modal" data-bs-dismiss="modal">
                                         {{ "molliePayments.components.mandateRemoveModal.deleteButton"|trans|striptags }}
                                         </button>
                                     {% endblock %}
