--- a/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
+++ b/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
@@ -9,6 +9,10 @@
         margin-top: 15px;
     }
 
+    .mollie-pos-terminals {
+        margin-top: 15px;
+    }
+
     .payment-method-description {
         order: -1;
     }
@@ -16,6 +20,14 @@
 
 .confirm-payment {
     .mollie-ideal-issuer {
+        margin-top: 15px;
+
+        .custom-select:invalid {
+            border: 1px solid red;
+        }
+    }
+
+    .mollie-pos-terminals {
         margin-top: 15px;
 
         .custom-select:invalid {
