--- a/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/component/buy-widget/buy-widget-form.html.twig
@@ -1,6 +1,13 @@
 {% sw_extends '@Storefront/storefront/component/buy-widget/buy-widget-form.html.twig' %}
 
-{% block buy_widget_buy_container %}
+ {% block buy_widget_buy_quantity_container %}
+     {% if mollie_subscriptions_enabled and product.customFields.mollie_payments_product_subscription_enabled %}
+     {% else %}
+         {{ parent() }}
+     {% endif %}
+ {% endblock %}
+
+{% block buy_widget_buy_button_container %}
 
     {% if mollie_subscriptions_enabled and product.customFields.mollie_payments_product_subscription_enabled %}
         <button class="btn btn-primary btn-block btn-buy" title="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}" aria-label="{{ "molliePayments.subscriptions.product.addToCartText"|trans|sw_sanitize }}">
