MOL-1268: fix subscription with deleted customers

--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
@@ -50,8 +50,13 @@
                     {% endblock %}
 
                     {% block mollie_payments_subscription_list_content_customer %}
-                        <template #column-customerId="{ item }">
-                            {{ item.customer.firstName }} {{ item.customer.lastName }}
+                        <template #column-customerId="{ item }" >
+                            <div v-if="item.customer">
+                                {{ item.customer.firstName }} {{ item.customer.lastName }}
+                            </div>
+                            <div v-else>
+                                {{ $tc('mollie-payments.subscriptions.list.deletedCustomer') }}
+                            </div>
                         </template>
                     {% endblock %}
 
